# review

./: .gitignore  README.md
docs/: 面试题：设计并实现一个基于 RAG（检索增强生成）的系统.docx
review-rag-server/: .gitignore  config.toml  main.py  pyproject.toml  storage.py
review-rag-server/database/: vector.py
review-rag-server/llms/: QwenLLM.py
review-rag-server/models/: max_kb_dataset.py  max_kb_document.py  max_kb_embedding.py  max_kb_file.py  max_kb_paragraph.py
review-rag-server/queries/: delete_file_item.sql  insert_dataset.sql  insert_document.sql  insert_embedding.sql  insert_file.sql  insert_paragraph.sql  mayim_initialize_database.sql  select_all_dataset.sql  select_all_documents.sql  select_all_files.sql  select_dataset_by_id.sql  select_file_by_md5.sql  update_dataset_info.sql  update_dataset_mark_deleted.sql  update_document_content.sql  update_document_mark_deleted.sql  update_document_status.sql  update_paragraph_status.sql
review-rag-server/utils/: config.py  markdown.py
review-rag-web/: bun.lockb  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
review-rag-web/api/: proxy.js
review-rag-web/src/: App.tsx  index.scss  main.tsx  output.css
review-rag-web/src/apis/: chat.ts  common.ts  files.ts
review-rag-web/src/components/ui/: app-sidebar.tsx
review-rag-web/src/routes/: CreateFile.tsx  CreateLibray.tsx  Documents.tsx  Files.tsx  Libraries.tsx  LibraryDetail.tsx  Search.tsx
review-rag-web/src/styles/: unreset.scss
